--- a/task0.css
+++ b/task0.css
@@ -1,85 +1,100 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+*{
+    font-family: "calibri";
 }
-
-#css-button {
-    color: white;
-    background-color: green;
-    width: 100px;
-    height: 30px;
-    border: 5px solid green;
+a{
+    text-decoration: none;
 }
-
-#js-button {
-    background-color: rgb(38, 160, 197);
-    border: 5px solid rgb(38, 160, 197);
-    color: white;
-    
-}
-
-.js-button {
-    background-color: red;
-    border: 5px solid red;
-    color: white;
-    width: 100px;
-    height: 30px;
-    
-}
-
-#nvp {
-    background-color: gray;
-    border: 5px solid gray;
-    color: white;
-}
-
-header {
-    float: left;
-    width: 33.33%;
+.col-1 {
+    float:left;
+    background: #3d4f5d;
     height: 100%;
-    padding-top: 40%;
-    padding-bottom: 60%;
-    background-color: rgb(98, 92, 151);
-    text-align: right;
+    width: 20%;
+    position: fixed;
     margin-right: 10px;
-        border-width: 50px;
 
 }
 
-
-header h1 {
+.css {
+    background-color: rgb(59, 170, 59);
     color: white;
-    
+    font-size: smaller;
+    padding: 0 10px;
+
 }
 
-#manifesto {
-    color: rgb(122, 204, 224);
-    
-}
-
-#home {
-    border: 2px solid rgb(122, 204, 224);
-    background-color: rgb(98, 92, 151);
+.javascrip {
+    background-color: rgb(3, 87, 197);
+    padding: 0 10px;
     color: white;
-    
+    font-size: smaller;
+
 }
 
-#projects {
-    border: 2px solid rgb(122, 204, 224);
-    background-color: rgb(98, 92, 151);
-    
-}
-
-button a {
+.JavaScript {
+    background-color: rgb(255, 0, 64);
+    padding: 0 10px;
     color: white;
-} 
+    font-size: smaller;
 
-#header {
-    margin-right: 20px;
 }
 
-#avatar {
+.Not-visited-places{
+    background-color: grey;
+    padding: 0 10px;
+    color: white;
+    font-size: smaller;
+
+}
+.blog {
+    position: absolute;
+    top: 25%;
+    right: 20px;
+}
+nav p, nav h2, nav a{
+    color: white;
+    text-align: right;
+
+}
+nav h2{
+    margin-bottom: -17px;
+}
+nav span {
+    border-style: solid;
+    border-color: #acc5d6;
+
+}
+nav a{
+    padding: 10px;
+    text-decoration: none;
+}
+
+
+
+.main-blogs {
+    width: 75%;
     float: right;
+}
+.main-blogs a{
+    color: rgba(71, 145, 248, 0.822);
+}
+.img-slider{
+
+    float: right;
+    position: relative;
+    bottom: 5px;
+    width: 50px;
+}
+
+footer {
+    margin-top: 50px;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+
+}
+
+.border-bottom{
+    border-bottom: 1px solid;
+    border-color: #acc5d6;
+    color: #acc5d6;
 }
